# speechmatics-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-async.yml  release.yml  test.yml
examples/: async-std-batch.rs  realtime-basic.rs  realtime-stop-start.rs  tokio-batch.rs
schemas/: batch.yml  realtime.yml
scripts/: generate-models.sh  generate_handlers_code.py  transform_async_to_openapi.py
speechmatics/: Cargo.toml  README.md
speechmatics-async/: Cargo.toml  README.md
speechmatics-async/examples/: async-std-batch.rs  batch-job-lifecycle.rs  realtime-basic.rs
speechmatics-async/src/: lib.rs
speechmatics-async/src/batch/: mod.rs
speechmatics-async/src/batch/models/: delete_job_response.rs  job_detail_error.rs  job_mode.rs  language_identification_config.rs  notification_config.rs  recognition_metadata.rs  sentiment_analysis_result.rs  sentiment_segment.rs  transcription_config_punctuation_overrides.rs  usage_response.rs
speechmatics-async/src/realtime/: handlers.rs  mod.rs
speechmatics-async/src/realtime/models/: add_partial_transcript.rs  audio_format.rs  end_of_stream.rs  end_of_transcript.rs  error.rs  info.rs  max_delay_mode_config.rs  punctuation_overrides.rs  recognition_alternative.rs  recognition_metadata.rs  recognition_result.rs  server_messages.rs  set_recognition_config.rs  speaker_diarization_config.rs  start_recognition.rs  translation_config.rs  vocab_word.rs
speechmatics/src/: lib.rs
speechmatics/src/batch/models/: create_job_response.rs  operating_point.rs  output_config_srt_overrides.rs  recognition_alternative.rs  recognition_result.rs  sentiment_analysis_result_sentiment_analysis.rs  summarization_config.rs  transcription_config_additional_vocab_inner.rs  translation_config.rs  translation_sentence.rs
speechmatics/src/realtime/: handlers.rs  mod.rs
speechmatics/src/realtime/models/: add_transcript.rs  diarization_config.rs  job_type.rs  recognition_result.rs  sentiment_speaker_summary.rs  sentiment_summary.rs  summarization_result.rs  transcription_config.rs  warning.rs
src/: lib.rs
src/batch/: mod.rs
src/batch/models/: alignment_config.rs  create_job_response.rs  data_fetch_config.rs  delete_job_response.rs  error_response.rs  job_config.rs  job_detail_error.rs  job_details.rs  job_info.rs  job_mode.rs  job_type.rs  language_identification_config.rs  mod.rs  notification_config.rs  operating_point.rs  output_config.rs  output_config_srt_overrides.rs  recognition_alternative.rs  recognition_display.rs  recognition_metadata.rs  recognition_result.rs  retrieve_job_response.rs  retrieve_jobs_response.rs  retrieve_transcript_response.rs  sentiment_analysis_result.rs  sentiment_analysis_result_sentiment_analysis.rs  sentiment_channel_summary.rs  sentiment_segment.rs  sentiment_speaker_summary.rs  sentiment_summary.rs  sentiment_summary_detail.rs  summarization_config.rs  summarization_result.rs  tracking_data.rs  transcription_config.rs  transcription_config_additional_vocab_inner.rs  transcription_config_punctuation_overrides.rs  transcription_config_speaker_diarization_config.rs  translation_config.rs  translation_sentence.rs  (+2 more)
src/realtime/: mod.rs
src/realtime/models/: add_partial_transcript.rs  add_partial_translation.rs  add_transcript.rs  add_translation.rs  audio_added.rs  audio_format.rs  client_messages.rs  diarization_config.rs  end_of_stream.rs  end_of_transcript.rs  error.rs  info.rs  max_delay_mode_config.rs  messages.rs  mod.rs  operating_point.rs  punctuation_overrides.rs  vocab_word.rs  (+14 more)
