[package]
name = "speechmatics-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio-tungstenite = { version = "0.19.0", features = [] }
base64 = "0.21.4"
futures = "0.3.28"
futures-io = "0.3.28"
http = "0.2.9"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "*"
url = "2.4.1"

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt"] }
