[package]
name = "speechmatics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Tudor Evans"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "*", features = ["native-tls"] }
anyhow = "1.0"
http = "0.2.9"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.4"
url = "2.4.1"
